--- a/src/App.css
+++ b/src/App.css
@@ -2,41 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 div.question {
   padding: "20px";
   margin: "0 6px 6px";
@@ -49,4 +14,15 @@ button {
   margin: "0 6px 6px";
   background: "blue";
   color: "white";
+}
+
+.choices {
+  padding: "130px";
+}
+
+Menu {
+  padding: "130px";
+  margin: "0 6px 6px";
+  background: "blue";
+  color: "white"
 }
