--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,10 @@ button.ui.active.button {
   margin-bottom: 10px;
  
 }
+
+input{
+  text-align: center;
+  height: 25px;
+  width: 250px;
+  color: red
+}
