--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ h1{
 }
 
 div.ui.header{
-  size:45px ;
+  size: 50px;
   color: black;
   padding: 10px;
 
@@ -37,7 +37,33 @@ button.ui.active.button {
 input{
   text-align: center;
   height: 25px;
-  width: 250px;
-  color: red
+  width: 550px;
+  padding: 15px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+
 }
 
+button.ui.active.button.green{  
+  padding-bottom: 10px;
+  background:green;
+  margin-bottom: 10px;
+}
+
+button.ui.active.button.red{  
+  padding-bottom: 10px;
+  background:red;
+  margin-bottom: 10px;
+}
+
+label {
+  font-size: 20px;
+}
+
+.form{
+  font-size: 40px;
+}
+
+.submit {
+  font-size: 20px;
+}
