--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,8 @@ button.ui.active.button {
 
 input{
   text-align: center;
-  height: 25px;
-  width: 550px;
+  height: 10px;
+  width: 300px;
   padding: 15px;
   margin-bottom: 10px;
   margin-left: 10px;
@@ -61,9 +61,10 @@ label {
 }
 
 .form{
-  font-size: 40px;
+  font-size: 30px;
+  margin-left: 10px;
 }
 
 .submit {
-  font-size: 20px;
+  font-size: 15px;
 }
