updated conditional rendering for button

--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,13 @@ input{
 
 }
 
-button.ui.active.button.green{  
+button.ui.active.button.correct{  
   padding-bottom: 10px;
   background:green;
   margin-bottom: 10px;
 }
 
-button.ui.active.button.red{  
+button.ui.active.button.wrong{  
   padding-bottom: 10px;
   background:red;
   margin-bottom: 10px;
@@ -67,4 +67,9 @@ label {
 
 .submit {
   font-size: 15px;
+}
+
+img {
+  width: 30%;
+  height: auto
 }
