--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,11 @@ button.ui.active.button {
 input{
   text-align: center;
   height: 10px;
-  width: 300px;
+  width: 600px;
   padding: 15px;
   margin-bottom: 10px;
   margin-left: 10px;
+  font-size: 15px
 
 }
 
